# template-securite-python

./: pyproject.toml  shellcode.txt  shellcode_hard.txt  vim
src/tp1/utils/: capture.py  lib.py  report.py
src/tp2/: main.py
src/tp2/utils/: analyzer.py
src/tp3/: main.py
src/tp3/utils/: captcha.py  session.py
src/tp4/: main.py
